tests/negative/gold/evaluating_test.gold
tests/negative/evaluating_test.toit:6:3: error: Can't call result of evaluating expression
  (1 + 2) 3
  ^
tests/negative/evaluating_test.toit:7:3: error: Can't call result of evaluating expression
  (unresolved) 2
  ^
tests/negative/evaluating_test.toit:7:4: error: Unresolved identifier: 'unresolved'
  (unresolved) 2
   ^~~~~~~~~~
Compilation failed.
